--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 <body>
   <header>
     <nav>
-        <ul>
+        <div class="hamburger-menu">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <ul class="nav-links">
           <li><a href="#home">Home</a></li>
           <li><a href="#menu">Menu</a></li>
           <li><a href="#about">About</a></li>
