--- a/catering-form.html
+++ b/catering-form.html
@@ -67,7 +67,7 @@
   </main>
   <footer>
     <!-- Add your footer content here -->
-    <p>&copy; 2023 Nina's Menu. All rights reserved. | Designed by <a href="https://github.com/b82agbulos">Bobby Agbulos</a></p>
+    <p>&copy; 2023 Nina's Menu. All rights reserved. | Designed by <a class="gold" href="https://github.com/b82agbulos">Bobby Agbulos</a></p>
   </footer>
 </body>
 </html>
