--- a/blog.html
+++ b/blog.html
@@ -50,7 +50,8 @@
   </main>
 
   <footer>
-    <p>&copy; 2023 Nina's Menu. All rights reserved. | Designed by <a class="gold" href="https://github.com/b82agbulos">Bobby Agbulos</a></p>
+    <p>&copy; 2023 Nina's Menu. All rights reserved. | Designed by <a class="gold" href="https://github.com/b82agbulos" target="_blank">Bobby Agbulos</a>
+    </p>
   </footer>
 </body>
 </html>
