--- a/order-form.html
+++ b/order-form.html
@@ -60,7 +60,8 @@
 
   <footer>
     <!-- Add your footer content here -->
-    <p>&copy; 2023 Nina's Menu. All rights reserved. | Designed by <a class="gold" href="https://github.com/b82agbulos">Bobby Agbulos</a></p>
+    <p>&copy; 2023 Nina's Menu. All rights reserved. | Designed by <a class="gold" href="https://github.com/b82agbulos" target="_blank">Bobby Agbulos</a>
+    </p>
   </footer>
 </body>
 </html>
