--- a/blog.html
+++ b/blog.html
@@ -11,13 +11,13 @@
   <header>
     <nav>
       <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/menu">Menu</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/order">Order</a></li>
-        <li><a href="/catering">Catering</a></li>
-        <li><a href="/contact">Contact</a></li>
-        <li><a href="/blog">Blog</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html#menu">Menu</a></li>
+        <li><a href="index.html#about">About</a></li>
+        <li><a href="order-form.html">Order</a></li>
+        <li><a href="catering.html">Catering</a></li>
+        <li><a href="index.html#contact">Contact</a></li>
+        <li><a href="index.html#blog">Blog</a></li>
       </ul>
     </nav>
   </header>
