--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <section id="catering">
   <!-- Add your catering section content here -->
 <h2>Catering</h2>
-<p>Let us cater your next event! We offer a variety of catering options to suit your needs. From trays of our delicious lumpia to full-service catering, we're here to make your event a memorable one. For more information on our catering services and pricing, please <a href="catering.html">visit our catering page</a>.</p>
+<p>Let us cater your next event! We offer a variety of catering options to suit your needs. From trays of our delicious lumpia to full-service catering, we're here to make your event a memorable one. For more information on our catering services and pricing, please <a href="catering.html" target="_blank">visit our catering page</a>.</p>
 </section>
 
 <section id="contact">
