--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section id="order">
         <!-- Add your order section content here -->
         <h2>Order</h2>
-    <p>Ready to place an order? Simply fill out our <a href="order-form.html">online order form</a> and we'll take care of the rest! Please allow at least 48 hours for processing and preparation.</p>
+    <p>Ready to place an order? Simply fill out our <a href="order-form.html" target="_blank">online order form</a> and we'll take care of the rest! Please allow at least 48 hours for processing and preparation.</p>
 </section>
 
 <section id="catering">
