--- a/catering-form.html
+++ b/catering-form.html
@@ -15,7 +15,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="index.html#menu">Menu</a></li>
         <li><a href="index.html#about">About</a></li>
-        <li><a href="order-form.html">Order</a></li>
+        <li><a href="order-form.html" target="_blank">Order</a></li>
         <li><a href="catering.html">Catering</a></li>
         <li><a href="index.html#contact">Contact</a></li>
         <li><a href="index.html#blog">Blog</a></li>
