--- a/catering.html
+++ b/catering.html
@@ -15,7 +15,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="index.html#menu">Menu</a></li>
         <li><a href="index.html#about">About</a></li>
-        <li><a href="order-form.html">Order</a></li>
+        <li><a href="order-form.html" target="_blank">Order</a></li>
         <li><a href="catering.html">Catering</a></li>
         <li><a href="index.html#contact">Contact</a></li>
         <li><a href="index.html#blog">Blog</a></li>
@@ -36,7 +36,7 @@
       </ul>
 
       <h3>Get a Quote</h3>
-      <p>To receive a quote for our catering services, please fill out our <a href="catering-form.html">catering inquiry form</a>. We'll get back to you as soon as possible with pricing and availability.</p>
+      <p>To receive a quote for our catering services, please fill out our <a href="catering-form.html" target="_blank">catering inquiry form</a>. We'll get back to you as soon as possible with pricing and availability.</p>
     </section>
   </main>
 
