--- a/order-form.html
+++ b/order-form.html
@@ -16,7 +16,7 @@
         <li><a href="index.html#menu">Menu</a></li>
         <li><a href="index.html#about">About</a></li>
         <li><a href="order-form.html">Order</a></li>
-        <li><a href="index.html#catering">Catering</a></li>
+        <li><a href="catering-form.html" target="_blank">Catering</a></li>
         <li><a href="index.html#contact">Contact</a></li>
         <li><a href="index.html#blog">Blog</a></li>
       </ul>
