--- a/catering-form.html
+++ b/catering-form.html
@@ -18,7 +18,7 @@
         <li><a href="order-form.html" target="_blank">Order</a></li>
         <li><a href="catering.html">Catering</a></li>
         <li><a href="index.html#contact">Contact</a></li>
-        <li><a href="index.html#blog">Blog</a></li>
+        <li><a href="blog.html">Blog</a></li>
       </ul>
     </nav>
   </header>
