--- a/catering.html
+++ b/catering.html
@@ -16,9 +16,8 @@
         <li><a href="index.html#menu">Menu</a></li>
         <li><a href="index.html#about">About</a></li>
         <li><a href="order-form.html" target="_blank">Order</a></li>
-        <li><a href="catering.html">Catering</a></li>
         <li><a href="index.html#contact">Contact</a></li>
-        <li><a href="index.html#blog">Blog</a></li>
+        <li><a href="blog.html">Blog</a></li>
       </ul>
     </nav>
   </header>
