--- a/order-form.html
+++ b/order-form.html
@@ -15,10 +15,9 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="index.html#menu">Menu</a></li>
         <li><a href="index.html#about">About</a></li>
-        <li><a href="order-form.html">Order</a></li>
         <li><a href="catering-form.html" target="_blank">Catering</a></li>
         <li><a href="index.html#contact">Contact</a></li>
-        <li><a href="index.html#blog">Blog</a></li>
+        <li><a href="blog.html">Blog</a></li>
       </ul>
     </nav>
   </header>
