--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,9 @@
 </head>
 <body>
   <header>
+    <div class="logo-container">
+      <img class="logo" src="images/logo-2.png" alt="Nina's Menu Logo" />
+    </div>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
