--- a/order-form.html
+++ b/order-form.html
@@ -30,7 +30,7 @@
       <h2>Online Order Form</h2>
       <p>Please fill out the form below to place your order. We'll get back to you as soon as possible to confirm your order and provide payment instructions. Please allow at least 48 hours for processing and preparation.</p>
 
-      <form action="submit-order.php" method="post">
+      <form id="order-form" action="submit-order.php" method="POST">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
         
