--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h5>("ahng ah-ming kwen-toh")</h5>
         <p>Embarking on a remarkable journey that began with a simple request for a friend's birthday, we quickly realized that we had a culinary gem in our hands, ready to be shared with the world.</p>
         <p>Our founder, an accomplished pastry chef and culinary maestro, has been crafting her delectable lumpia for years. With the introduction of Nina's Menu, we are now bringing our distinctive flavors and rich culture to events across the city. Our mission is to provide a carefully curated menu of mouthwatering dishes and desserts, available as trays or plates, that will turn your next gathering into a memorable affair!</p>
-        <p>Break away from the mundane catering choices and distinguish your event with Nina's Menu and our authentic flavors that will leave your competition in the dust. Keep up with our latest happenings by following us on social media and be the first to savor the most scrumptious and genuine lumpia in town! #NinasMenu #AuthenticFlavors #DeliciousLumpia</p>
+        <p>Break away from the mundane catering choices and distinguish your event with Nina's Menu and our authentic flavors that will leave your competition in the dust. Keep up with our latest happenings by following us on social media and be the first to savor the most scrumptious and genuine lumpia in town!</p>
         </section>
         
         <section id="order">
